Revert "TEMPORARILY skills in edit view"
This reverts commit 7a847111b94aff4f873f0e1196c31baeb2bed269.

--- a/EmployeesData/EmployeesData/Views/Employees/Create.cshtml
+++ b/EmployeesData/EmployeesData/Views/Employees/Create.cshtml
@@ -71,6 +71,7 @@
             var btn = $('<Button class="btn btn-primary mr-2 mb-2" type="button" id='+skill+'>' + skill +
                 '<span class="text-white" style="font-weight:bold""> x</span>' + '</Button>');
             $("#skillsDiv").append(btn);
+            terms.map((item) => $(`#terms`).click(function () { console.log("clicked") }))
         }
 
         $("#tags")
