--- a/EmployeesData/EmployeesData/Views/Employees/Edit.cshtml
+++ b/EmployeesData/EmployeesData/Views/Employees/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model EmployeesData.Models.EditViewModel
+﻿@model EmployeesData.Models.Employee
 @{
     ViewData["Title"] = "Edit Employee";
 }
@@ -9,26 +9,18 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Employee.Id" />
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="Employee.FullName" class="control-label"></label>
-                <input asp-for="Employee.FullName" class="form-control" />
-                <span asp-validation-for="Employee.FullName" class="text-danger"></span>
+                <label asp-for="FullName" class="control-label"></label>
+                <input asp-for="FullName" class="form-control" />
+                <span asp-validation-for="FullName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Employee.Email" class="control-label"></label>
-                <input asp-for="Employee.Email" class="form-control" />
-                <span asp-validation-for="Employee.Email" class="text-danger"></span>
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="@Model.Skills" class="control-label"></label> <br />
-                <input asp-for="@Model.SkillsString" class="form-control mb-3" placeholder="Add new skills" />
-                @foreach (var item in Model.Skills)
-                {
-                    <button class="btn btn-info">@item.Name</button>
-                }
-            </div>
-            <div class="form-group mt-5">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
