--- a/EmployeesData/EmployeesData/Views/Employees/Edit.cshtml
+++ b/EmployeesData/EmployeesData/Views/Employees/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model EmployeesData.Models.Employee
+﻿@model EmployeesData.Models.CreateEditViewModel
 @{
     ViewData["Title"] = "Edit Employee";
 }
@@ -9,18 +9,40 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="Employee.Id" />
             <div class="form-group">
-                <label asp-for="FullName" class="control-label"></label>
-                <input asp-for="FullName" class="form-control" />
-                <span asp-validation-for="FullName" class="text-danger"></span>
+                <label asp-for="Employee.FullName" class="control-label"></label>
+                <input asp-for="Employee.FullName" class="form-control" />
+                <span asp-validation-for="Employee.FullName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+                <label asp-for="Employee.Email" class="control-label"></label>
+                <input asp-for="Employee.Email" class="form-control" />
+                <span asp-validation-for="Employee.Email" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="demo-section k-content">
+                <label for="skills">Skills</label>
+                @(Html.Kendo().MultiSelectFor(m => m.SelectedSkillsList)
+              //.Name("required")
+              .Placeholder("Select skills...")
+              .DataValueField("Id")
+              .DataTextField("Name")
+              .BindTo(Model.SkillsList)
+              //.Value(new string[] { "ASP.NET", "iOS" })
+              )
+            </div>
+            <style>
+                .demo-section label {
+                    display: block;
+                    margin: 15px 0 5px 0;
+                }
+
+                #get {
+                    float: right;
+                    margin: 25px auto 0;
+                }
+            </style>
+            <div class="form-group mt-3">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
