--- a/EmployeesData/EmployeesData/Views/_ViewImports.cshtml
+++ b/EmployeesData/EmployeesData/Views/_ViewImports.cshtml
@@ -1,3 +1,7 @@
 ﻿@using EmployeesData
 @using EmployeesData.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+@using Kendo.Mvc.UI
+@using Kendo.Mvc.TagHelpers
+@addTagHelper *, Kendo.MVC
