--- a/EmployeesData/EmployeesData/Views/Employees/Create.cshtml
+++ b/EmployeesData/EmployeesData/Views/Employees/Create.cshtml
@@ -5,14 +5,33 @@
 <h4>Add Employee</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="@Model.Employee.FullName" class="control-label">Full Name <span class="text-danger">*</span> </label>
-                <input asp-for="@Model.Employee.FullName" class="form-control" />
-                <span asp-validation-for="@Model.Employee.FullName" class="text-danger"></span>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="@Model.Employee.FirstName" class="control-label">First Name <span class="text-danger">*</span> </label>
+                        <input asp-for="@Model.Employee.FirstName" class="form-control" />
+                        <span asp-validation-for="@Model.Employee.FirstName" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="@Model.Employee.MiddleName" class="control-label">Middle Name <span class="text-danger">*</span> </label>
+                        <input asp-for="@Model.Employee.MiddleName" class="form-control" />
+                        <span asp-validation-for="@Model.Employee.MiddleName" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="@Model.Employee.LastName" class="control-label">Last Name <span class="text-danger">*</span> </label>
+                        <input asp-for="@Model.Employee.LastName" class="form-control" />
+                        <span asp-validation-for="@Model.Employee.LastName" class="text-danger"></span>
+                    </div>
+                </div>
             </div>
+            
             <div class="form-group">
                 <label asp-for="@Model.Employee.Email" class="control-label"></label>
                 <input asp-for="@Model.Employee.Email" class="form-control" />
