--- a/EmployeesData/EmployeesData/Views/Employees/Edit.cshtml
+++ b/EmployeesData/EmployeesData/Views/Employees/Edit.cshtml
@@ -6,14 +6,32 @@
 <h4>Edit Employee</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Employee.Id" />
-            <div class="form-group">
-                <label asp-for="Employee.FullName" class="control-label"></label>
-                <input asp-for="Employee.FullName" class="form-control" />
-                <span asp-validation-for="Employee.FullName" class="text-danger"></span>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="@Model.Employee.FirstName" class="control-label">First Name <span class="text-danger">*</span> </label>
+                        <input asp-for="@Model.Employee.FirstName" class="form-control" />
+                        <span asp-validation-for="@Model.Employee.FirstName" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="@Model.Employee.MiddleName" class="control-label">Middle Name <span class="text-danger">*</span> </label>
+                        <input asp-for="@Model.Employee.MiddleName" class="form-control" />
+                        <span asp-validation-for="@Model.Employee.MiddleName" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="@Model.Employee.LastName" class="control-label">Last Name <span class="text-danger">*</span> </label>
+                        <input asp-for="@Model.Employee.LastName" class="form-control" />
+                        <span asp-validation-for="@Model.Employee.LastName" class="text-danger"></span>
+                    </div>
+                </div>
             </div>
             <div class="form-group">
                 <label asp-for="Employee.Email" class="control-label"></label>
