added under-construction page

--- a/EmployeesData/EmployeesData/Views/Home/Index.cshtml
+++ b/EmployeesData/EmployeesData/Views/Home/Index.cshtml
@@ -2,16 +2,27 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="container">
-    <div class="row mt-5">
-        <div class="col-sm-8 offset-sm-2">
-            <div class="card text-center" style="box-shadow: 0 4px 8px 0 lightgray;">
-                <div class="card-body">
-                    <h5 class="card-title">Employees List</h5>
-                    <p class="card-text">List of employees to add, edit, or delete employees and view their skills.</p>
-                    <a asp-controller="Employees" asp-action="Index" class="btn btn-info">Go to the list</a>
+    <div class="container">
+        <div class="row mt-5">
+            <div class="col-sm-8 offset-sm-2">
+                <div class="card text-center" style="box-shadow: 0 4px 8px 0 lightgray;">
+                    <div class="card-body">
+                        <h5 class="card-title">Employees List</h5>
+                        <p class="card-text">List of employees to add, edit, or delete employees and view their skills.</p>
+                        <a asp-controller="Employees" asp-action="Index" class="btn btn-info">Go to the list</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-5">
+            <div class="col-sm-8 offset-sm-2">
+                <div class="card text-center" style="box-shadow: 0 4px 8px 0 lightgray;">
+                    <div class="card-body">
+                        <h5 class="card-title">Skills List</h5>
+                        <p class="card-text">List of skills to add, edit, or delete skills.</p>
+                        <a asp-controller="Home" asp-action="UnderConstruction" class="btn btn-info">Go to the list</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
