--- a/EmployeesData/EmployeesData/Views/Home/Index.cshtml
+++ b/EmployeesData/EmployeesData/Views/Home/Index.cshtml
@@ -7,9 +7,9 @@
             <div class="col-sm-8 offset-sm-2">
                 <div class="card text-center" style="box-shadow: 0 4px 8px 0 lightgray;">
                     <div class="card-body">
-                        <h5 class="card-title">Employees List</h5>
+                        <h5 class="card-title font-weight-bold text-info" style="font-size:26px">Employees List</h5>
                         <p class="card-text">List of employees to add, edit, or delete employees and view their skills.</p>
-                        <a asp-controller="Employees" asp-action="Index" class="btn btn-info">Go to the list</a>
+                        <a asp-controller="Employees" asp-action="Index" class="btn btn-info font-weight-bold">Go to the list</a>
                     </div>
                 </div>
             </div>
@@ -18,9 +18,9 @@
             <div class="col-sm-8 offset-sm-2">
                 <div class="card text-center" style="box-shadow: 0 4px 8px 0 lightgray;">
                     <div class="card-body">
-                        <h5 class="card-title">Skills List</h5>
+                        <h5 class="card-title font-weight-bold text-info" style="font-size:26px">Skills List</h5>
                         <p class="card-text">List of skills to add, edit, or delete skills.</p>
-                        <a asp-controller="Home" asp-action="UnderConstruction" class="btn btn-info">Go to the list</a>
+                        <a asp-controller="Home" asp-action="UnderConstruction" class="btn btn-info font-weight-bold">Go to the list</a>
                     </div>
                 </div>
             </div>
